# genshin-scripts

./: README.md  pyproject.toml  ww2.md
genshin_friendship/: main.py  process.py  utils.py
genshin_friendship/scripts/: friendship.py
genshin_friendship/utils/: __init__.py  actions.py  events.py  window.py
genshin_scripts/: main.py
genshin_scripts/cli/: args.py  options.py
genshin_scripts/scripts/: __init__.py  friendship.py  options.py
genshin_scripts/utils/: __init__.py  actions.py  events.py
