[tool.poetry]
name = "genshin-friendship"
version = "0.1.0"
description = "A Python project for automating tasks in Genshin Impact game"
authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "genshin_friendship" }]

[tool.poetry.dependencies]
python = "^3.7.2"
autopep8 = "^2.0.2"
pylint = "^2.17.2"
pyautogui = "^0.9.53"
pygetwindow = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
run = { cmd = "poetry run python genshin_friendship/main.py", help = "Runs the program" }
lint = { cmd = "poetry run pylint genshin_friendship/*", help = "Reviews the code with PyLint" }
